package io.github.ptus04.server.enums;

public enum UserGenderEnum {
    MALE,
    FEMALE
}
