package io.github.ptus04.server.enums;

public enum UserRoleEnum {
    CUSTOMER,
    EMPLOYEE,
    ADMIN
}
